--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -3,6 +3,10 @@
     "service": {}
   },
   "slices": {
-    "TextBlock": {}
+    "TextBlock": {
+      "default": {
+        "primary": {}
+      }
+    }
   }
 }
