--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -7,6 +7,11 @@
       "default": {
         "primary": {}
       }
+    },
+    "DrinkDrivingCalculator": {
+      "default": {
+        "primary": {}
+      }
     }
   }
 }
