--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -12,6 +12,11 @@
       "default": {
         "primary": {}
       }
+    },
+    "ConveyancingCalculator": {
+      "default": {
+        "primary": {}
+      }
     }
   }
 }
