--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -17,6 +17,11 @@
       "default": {
         "primary": {}
       }
+    },
+    "Testimonials": {
+      "default": {
+        "primary": {}
+      }
     }
   }
 }
