--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "slicemachine": "start-slicemachine --port 9999"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@prismicio/client": "^6.7.3",
     "@prismicio/helpers": "^2.3.9",
     "@prismicio/react": "^2.5.2",
