--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "prismic-reactjs": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-tsparticles": "^2.9.3",
     "sass": "^1.59.3",
-    "theme-ui": "^0.6.2"
+    "theme-ui": "^0.6.2",
+    "tsparticles": "^2.9.3",
+    "tsparticles-preset-stars": "^2.9.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
